samples/_failures_safe/1761172607_ffa759_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a97ba4f5.c: In function ‘main’:
./samples/SAFE/__tmp_a97ba4f5.c:149:5: error: ‘add’ undeclared (first use in this function)
  149 |     add
      |     ^~~
./samples/SAFE/__tmp_a97ba4f5.c:149:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_a97ba4f5.c:149:8: error: expected ‘;’ at end of input
  149 |     add
      |        ^
      |        ;
./samples/SAFE/__tmp_a97ba4f5.c:149:5: error: expected declaration or statement at end of input
  149 |     add
      |     ^~~
